# wasmtime_serde

./: Cargo.toml  LICENSE  rustfmt.toml
crates/guest/: Cargo.toml
crates/guest/src/: lib.rs
crates/guest_macro/: Cargo.toml
crates/guest_macro/src/: lib.rs
crates/host/: Cargo.toml
crates/host/src/: func.rs  lib.rs  runtime.rs
crates/host/tests/: guest.wasm  runtime.rs
crates/host_macro/: Cargo.toml
crates/host_macro/src/: lib.rs
docs/: README.md
docs/examples/: README.md
docs/examples/guest/: Cargo.toml
docs/examples/guest/src/: lib.rs
docs/examples/host/: Cargo.toml
docs/examples/host/src/: main.rs
