[package]
name = "wasmtime_serde_guest"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = ["Heráclito <heraclitoqsaldanha@gmail.com>"]
description = "Simple library for serializing complex types to the wasmtime runtime using serde"
repository = "https://github.com/Heraclito-Q-Saldanha/wasmtime_serde"

[dependencies]
serde = "1.0.160"
bincode = "1.3.3"
wasmtime_serde_guest_macro = "0.1.0"