[package]
name = "wasmtime_serde_host"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"
authors = ["Heráclito <heraclitoqsaldanha@gmail.com>"]
description = "Simple library for serializing complex types to the wasmtime runtime using serde"
repository = "https://github.com/Heraclito-Q-Saldanha/wasmtime_serde"

[dependencies]
wasmtime_serde_host_macro = "0.1.0"
wasmtime = "4.0.0"
serde = "1.0.152"
bincode = "1.3.3"
anyhow = "1.0.68"