[package]
name = "guest"
version = "0.1.0"
edition = "2021"
license = "Unlicense OR MIT"

[lib]
crate-type = ['cdylib']

[dependencies]
wasmtime_serde_guest = {path = "../../../crates/guest"}
serde = {version = "1.0.152", features = ["derive"]}

[profile.release]
opt-level = "z"
codegen-units = 1
lto = true
strip = true